--- a/public/scss/_components.countdown.scss
+++ b/public/scss/_components.countdown.scss
@@ -36,9 +36,21 @@
 	padding:0 8px;
 
 }
+
 .phtpb_timer__module__unit {
-	font-size:25%;
+	font-size:40%;
 	line-height:2;
+}
+.phtpb_timer--alpha .phtpb_timer__module__unit {
+	font-size:25%;
+}
+@include media-query( 'small' ) {
+	.phtpb_timer--alpha .phtpb_timer__module__value {
+		font-size:75%;
+	}
+	.phtpb_timer--alpha .phtpb_timer__module__unit {
+	 font-size:20%;
+	}	
 }
 .phtpb_timer__module__value:after {
 content:'99';
